# flappy-ai

./: .gitignore  README-ru.md  README.md  globals.py  main.py  pyproject.toml
assets/: _colors.py  _convert.py
best/: best_result.txt
objects/: __init__.py  background.py  bird.py  cloud.py  entity.py  overlay.py  pipe.py
